--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
 			<artifactId>hibernate-search-orm</artifactId>
 			<version>5.10.3.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.17</version>
+		</dependency>
 	</dependencies>
 
 	<build>
