--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.search.default.directory_provider=ram
+spring.jpa.properties.hibernate.search.default.directory_provider=local-heap
 #spring.jpa.properties.hibernate.search.default.indexBase=/home/helei/index
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
