--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,8 @@ spring.datasource.driver-class-name=org.h2.Driver
 #spring.datasource.username=postgres
 #spring.datasource.password=123456
 
+datasource.initialization-mode=always
+
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.search.default.directory_provider=local-heap
@@ -37,6 +39,7 @@ spring.http.multipart.max-request-size=10MB
 spring.messages.basename=classpath:i18n/messages 
 spring.messages.encoding=UTF-8
 
+springfox.documentation.swagger.v2.path=/api-docs
+
 # customization
 cros.accessControlAllowOrigin=http://localhost, http://localhost:80, http://localhost:4200
-
