--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.profiles.active=dev
 #logging.level.root=INFO
 logging.level.org.springframework.security=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
+logging.level.com.emailtohl.hjk.crm=DEBUG
 
 spring.datasource.driver-class-name=org.h2.Driver
 #jdbc.url=jdbc:h2:~/data/oauth2;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
