--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,14 +20,16 @@ spring.datasource.driver-class-name=org.h2.Driver
 #jdbc.pass=
 
 #spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/practice
+#spring.datasource.url=jdbc:postgresql://localhost:5432/hjkcrm
 #spring.datasource.username=postgres
 #spring.datasource.password=123456
 
 datasource.initialization-mode=always
 
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
+#create/create-drop/update/validate
+spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 spring.jpa.show-sql=true
+spring.jpa.format_sql=true
 spring.jpa.properties.hibernate.search.default.directory_provider=local-heap
 #spring.jpa.properties.hibernate.search.default.indexBase=/home/helei/index
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
