--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,11 @@
 			<artifactId>poi</artifactId>
 			<version>3.17</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
