--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.profiles.active=dev
 #logging.file=practice.log
 #logging.level.root=INFO
 logging.level.org.springframework.security=DEBUG
-logging.level.org.hibernate.type.descriptor.sql=TRACE
+#logging.level.org.hibernate.type.descriptor.sql=TRACE
 logging.level.com.emailtohl.hjk.crm=DEBUG
 
 spring.datasource.driver-class-name=org.h2.Driver
@@ -28,8 +28,8 @@ datasource.initialization-mode=always
 
 #create/create-drop/update/validate
 spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.format_sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.format_sql=true
 spring.jpa.properties.hibernate.search.default.directory_provider=local-heap
 #spring.jpa.properties.hibernate.search.default.indexBase=/home/helei/index
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
@@ -39,8 +39,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.http.multipart.max-file-size=2MB
 spring.http.multipart.max-request-size=10MB
 
-spring.messages.basename=classpath:i18n/messages 
-spring.messages.encoding=UTF-8
+spring.messages.basename=i18n/messages
 
 springfox.documentation.swagger.v2.path=/api-docs
 
