--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,20 +14,20 @@ logging.level.org.springframework.security=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql=TRACE
 logging.level.com.emailtohl.hjk.crm=DEBUG
 
-spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.driver-class-name=org.h2.Driver
 #jdbc.url=jdbc:h2:~/data/oauth2;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
 #jdbc.user=sa
 #jdbc.pass=
 
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/hjkcrm
-#spring.datasource.username=postgres
-#spring.datasource.password=123456
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/hjkcrm
+spring.datasource.username=postgres
+spring.datasource.password=123456
 
 datasource.initialization-mode=always
 
 #create/create-drop/update/validate
-spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
 #spring.jpa.show-sql=true
 #spring.jpa.format_sql=true
 spring.jpa.properties.hibernate.search.default.directory_provider=local-heap
