--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,15 +14,15 @@ logging.level.org.springframework.security=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql=TRACE
 logging.level.com.emailtohl.hjk.crm=DEBUG
 
-#spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.driver-class-name=org.h2.Driver
 #jdbc.url=jdbc:h2:~/data/oauth2;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
 #jdbc.user=sa
 #jdbc.pass=
 
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/hjkcrm
-spring.datasource.username=postgres
-spring.datasource.password=123456
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/hjkcrm
+#spring.datasource.username=postgres
+#spring.datasource.password=123456
 
 datasource.initialization-mode=always
 
