--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@ management.endpoint.shutdown.enabled=true
 spring.profiles.active=dev
 
 #logging.path=/var/logs
-#logging.file=practice.log
+#logging.file=hjkcrm.log
 #logging.level.root=INFO
-logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.security=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql=TRACE
 logging.level.com.emailtohl.hjk.crm=DEBUG
 
