--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,8 +36,9 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 #spring.thymeleaf.cache=false
 
-spring.http.multipart.max-file-size=2MB
-spring.http.multipart.max-request-size=5MB
+#in spring boot 2
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
 
 spring.messages.basename=i18n/messages
 
