--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ management.security.enabled=false
 management.endpoints.web.exposure.include=shutdown,env
 management.endpoint.shutdown.enabled=true
 
-spring.profiles.active=dev
+spring.profiles.active=default
 
-#logging.path=/var/logs
+logging.path=/var/hjk/logs
 #logging.file=hjkcrm.log
 #logging.level.root=INFO
 #logging.level.org.springframework.security=DEBUG
