--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=crm
+#server.port=8080
 
 management.security.enabled=false
 #management.endpoints.web.exposure.include=*
@@ -12,7 +13,7 @@ logging.path=/var/hjk/logs
 #logging.level.root=INFO
 #logging.level.org.springframework.security=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql=TRACE
-logging.level.com.emailtohl.hjk.crm=DEBUG
+#logging.level.com.emailtohl.hjk.crm=DEBUG
 
 spring.datasource.driver-class-name=org.h2.Driver
 #jdbc.url=jdbc:h2:~/data/oauth2;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
@@ -45,4 +46,5 @@ spring.messages.basename=i18n/messages
 springfox.documentation.swagger.v2.path=/api-docs
 
 # customization
-cros.accessControlAllowOrigin=http://localhost, http://localhost:80, http://localhost:4200
+#cros.accessControlAllowOrigin=http://localhost, http://localhost:80, http://localhost:4200
+cros.accessControlAllowOrigin=*
