--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ management.endpoint.shutdown.enabled=true
 spring.profiles.active=default
 
 logging.path=/var/hjk/logs
-#logging.file=hjkcrm.log
+#logging.file=/var/hjk/logs/hjkcrm.log
 #logging.level.root=INFO
 #logging.level.org.springframework.security=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql=TRACE
@@ -32,7 +32,7 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 #spring.jpa.show-sql=true
 #spring.jpa.format_sql=true
 spring.jpa.properties.hibernate.search.default.directory_provider=local-heap
-#spring.jpa.properties.hibernate.search.default.indexBase=/home/helei/index
+spring.jpa.properties.hibernate.search.default.indexBase=/var/hjk/luceneindex
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 #spring.thymeleaf.cache=false
@@ -46,5 +46,4 @@ spring.messages.basename=i18n/messages
 springfox.documentation.swagger.v2.path=/api-docs
 
 # customization
-#cros.accessControlAllowOrigin=http://localhost, http://localhost:80, http://localhost:4200
-cros.accessControlAllowOrigin=*
+cros.accessControlAllowOrigin=http://114.115.159.84, http://localhost, http://localhost:80, http://localhost:4200
