--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,36 +6,13 @@ management.security.enabled=false
 management.endpoints.web.exposure.include=shutdown,env
 management.endpoint.shutdown.enabled=true
 
-spring.profiles.active=default
-
-logging.path=/var/hjk/logs
-#logging.file=/var/hjk/logs/hjkcrm.log
-#logging.level.root=INFO
-#logging.level.org.springframework.security=DEBUG
-#logging.level.org.hibernate.type.descriptor.sql=TRACE
-#logging.level.com.emailtohl.hjk.crm=DEBUG
-
-spring.datasource.driver-class-name=org.h2.Driver
-#jdbc.url=jdbc:h2:~/data/oauth2;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
-#jdbc.user=sa
-#jdbc.pass=
-
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/hjkcrm
-#spring.datasource.username=postgres
-#spring.datasource.password=123456
+spring.profiles.active=dev
 
 datasource.initialization-mode=always
 
-#create/create-drop/update/validate
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.format_sql=true
-spring.jpa.properties.hibernate.search.default.directory_provider=local-heap
-spring.jpa.properties.hibernate.search.default.indexBase=/var/hjk/luceneindex
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
 #spring.thymeleaf.cache=false
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 #in spring boot 2
 spring.servlet.multipart.max-file-size=5MB
@@ -43,7 +20,3 @@ spring.servlet.multipart.max-request-size=5MB
 
 spring.messages.basename=i18n/messages
 
-springfox.documentation.swagger.v2.path=/api-docs
-
-# customization
-cros.accessControlAllowOrigin=http://114.115.159.84, http://localhost, http://localhost:80, http://localhost:4200
