--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,7 +17,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 
 #create/create-drop/update/validate
 spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 #spring.jpa.format_sql=true
 spring.jpa.properties.hibernate.search.default.directory_provider=local-heap
 #spring.jpa.properties.hibernate.search.default.indexBase=/var/hjk/luceneindex
