新增上传头像功能

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 #logging.path=/var/hjk/logs
 #logging.file=/var/hjk/logs/hjkcrm.log
 #logging.level.root=INFO
-#logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql=TRACE
 logging.level.com.emailtohl.hjk.crm=DEBUG
 
