--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -18,9 +18,11 @@ spring.datasource.driver-class-name=org.h2.Driver
 #create/create-drop/update/validate
 spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 #spring.jpa.show-sql=true
-#spring.jpa.format_sql=true
+#spring.jpa.format-sql=true
 spring.jpa.properties.hibernate.search.default.directory_provider=local-heap
 #spring.jpa.properties.hibernate.search.default.indexBase=/var/hjk/luceneindex
+
+spring.h2.console.enabled=true
 
 # customization
 cros.accessControlAllowOrigin=http://localhost, http://localhost:80, http://localhost:4200
