--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 logging.path=/var/hjk/logs
 logging.file=/var/hjk/logs/hjkcrm.log
-#logging.level.root=INFO
+logging.level.root=WARN
 #logging.level.org.springframework.security=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql=TRACE
 #logging.level.com.emailtohl.hjk.crm=DEBUG
@@ -13,7 +13,7 @@ spring.datasource.password=123456
 #create/create-drop/update/validate
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 #spring.jpa.show-sql=true
-#spring.jpa.format_sql=true
+#spring.jpa.format-sql=true
 #spring.jpa.properties.hibernate.search.default.directory_provider=local-heap
 spring.jpa.properties.hibernate.search.default.indexBase=/var/hjk/luceneindex
 
