--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,14 @@ datasource.initialization-mode=always
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+# Whether to expose and assume 1-based page number indexes.
+spring.data.web.pageable.one-indexed-parameters=false
+
 #in spring boot 2
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 
 spring.messages.basename=i18n/messages
+
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 
