--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ management.security.enabled=false
 management.endpoints.web.exposure.include=shutdown,env
 management.endpoint.shutdown.enabled=true
 
+# dev/prod
 spring.profiles.active=dev
 
 datasource.initialization-mode=always
