迁移到阿里云

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -18,4 +18,4 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.search.default.indexBase=/var/hjk/luceneindex
 
 # customization
-cros.accessControlAllowOrigin=http://114.115.159.84, http://localhost, http://localhost:80, http://localhost:4200
+cros.accessControlAllowOrigin=http://120.78.145.218, http://114.115.159.84, http://localhost, http://localhost:80, http://localhost:4200
